--- a/02_control_of_flow.ipynb
+++ b/02_control_of_flow.ipynb
@@ -307,6 +307,788 @@
     "result = '홀수' if num % 2 == 1 else '짝수'\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "006e0850-b613-4907-a43e-4a7a350d9424",
+   "metadata": {},
+   "source": [
+    "# 반복문\n",
+    "\n",
+    "## while문\n",
+    "\n",
+    "```\n",
+    "while <조건식>:\n",
+    "    실행할 코드\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7d04218b-4873-4684-9b73-ceae1f91e09b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "\n",
+    "while a < 5:\n",
+    "    print(a)\n",
+    "    a += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ecdbb9f8-efac-43ed-af42-ee8fca249008",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "안녕이라고해줘: 하이\n",
+      "안녕이라고해줘: 안녕\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 사용자가 '안녕' 이라고 할때까지 계속 입력을 요청받는 코드\n",
+    "\n",
+    "greeting = ''\n",
+    "\n",
+    "while greeting != '안녕':\n",
+    "   greeting = input('안녕이라고해줘:')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9b49867-1e74-4c96-a53a-464bce741323",
+   "metadata": {},
+   "source": [
+    "## for\n",
+    "정해진 범위 내의 반복\n",
+    "\n",
+    "```\n",
+    "for variable in sequence:\n",
+    "    code\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c1b888bf-0603-43e0-b102-4a76bbc5f16c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "for number in numbers:\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "11111663-b519-4795-abc7-96a239064bdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "단어를 입력해주세요: apple\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "p\n",
+      "p\n",
+      "l\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for문을 사용해서 사용자가 입력한 데이터를 한글자씩 출력하는 코드\n",
+    "\n",
+    "str = input('단어를 입력해주세요:')\n",
+    "\n",
+    "for s in str:\n",
+    "    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a48a942b-90a8-4b11-800a-cbfe7cf56a56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range 사용한 for문\n",
+    "for i in range(5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5014185c-bf27-47c6-a59c-75c3680dc04e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tuple 사용한 for문\n",
+    "for i in (1, 2, 3, 4, 5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ecf59bf4-a35a-4c26-884a-fee16bec1cfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1~30까지 숫자 중에서 홀수만 담긴 리스트를 출력\n",
+    "\n",
+    "a = list(range(1,31))\n",
+    "result = []\n",
+    "\n",
+    "for i in a:\n",
+    "    if i % 2 == 1:\n",
+    "        result.append(i)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3f8a3b62-93e4-4266-a03d-53848ed95876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "라면\n",
+      "1\n",
+      "김밥\n",
+      "2\n",
+      "돈까스\n"
+     ]
+    }
+   ],
+   "source": [
+    "menus = ['라면', '김밥', '돈까스']\n",
+    "\n",
+    "for menu in enumerate(menus):   #enumerate() : index값 필요할 때 사용\n",
+    "    print(menu[0])\n",
+    "    print(menu[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8b0b7ec7-318e-4c8c-959f-1c6dee70bc1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "라면\n",
+      "1\n",
+      "김밥\n",
+      "2\n",
+      "돈까스\n"
+     ]
+    }
+   ],
+   "source": [
+    "menus = ['라면', '김밥', '돈까스']\n",
+    "\n",
+    "for idx, menu in enumerate(menus):   \n",
+    "    print(idx)\n",
+    "    print(menu)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9823ba3-5621-47de-a441-b0ac316f5b21",
+   "metadata": {},
+   "source": [
+    "## dictionary 반복\n",
+    "\n",
+    "1. for key in dict:\n",
+    "2. for key in dict.keys():\n",
+    "3. for value in dict.values():\n",
+    "4. for key, value in dict.items():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2097e6b2-262b-46c8-9585-cf6e10d145bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info = {\n",
+    "    'name': 'seungwook',\n",
+    "    'location': 'seoul',\n",
+    "    'phone': '010-1234-1234'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8233752d-37d7-4c94-87e7-c79200070450",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "seungwook\n",
+      "location\n",
+      "seoul\n",
+      "phone\n",
+      "010-1234-1234\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in info:\n",
+    "    print(i)       # key에 접근\n",
+    "    print(info[i])  # value에 접근"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a5e61a56-4985-4593-952b-57bdfe12ef5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blood_type = {\n",
+    "    'A': 5,\n",
+    "    'B': 4,\n",
+    "    'O': 2,\n",
+    "    'AB': 3\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "73ed2a80-c78c-4df9-9cf1-fafdf4422faa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "혈액형 목록\n",
+      "A\n",
+      "B\n",
+      "O\n",
+      "AB\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('혈액형 목록')\n",
+    "for key in blood_type:    \n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b8cccb66-31a4-44b9-9123-99c86d0c8eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "혈액형 목록\n",
+      "A\n",
+      "B\n",
+      "O\n",
+      "AB\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('혈액형 목록')\n",
+    "for key in blood_type.keys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4771981f-1d3f-46cc-ab17-b6ee74989f68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "총인원은 14명입니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 0\n",
+    "\n",
+    "for value in blood_type.values():\n",
+    "    result += value\n",
+    "print(f'총인원은 {result}명입니다')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "276fb5bf-154c-4f4b-b1b4-e05bcdb57a41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A형은 5명입니다\n",
+      "B형은 4명입니다\n",
+      "O형은 2명입니다\n",
+      "AB형은 3명입니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in blood_type.items():\n",
+    "    print(f'{key}형은 {value}명입니다')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3f03b3ef-b167-44c1-9e0e-79d1ae1797b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('A', 5), ('B', 4), ('O', 2), ('AB', 3)])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blood_type.items()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb214aaf-a632-4dbf-aec6-f3e849712713",
+   "metadata": {},
+   "source": [
+    "### break\n",
+    "반복문을 종료시키는 키워드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "adce3028-175b-4cea-9a6f-a146f9e28b81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "5 넘었어\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(100):\n",
+    "    if i > 5:\n",
+    "        print('5 넘었어')\n",
+    "        break\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "9c0c534a-78bb-4401-8451-25fb7001b8b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "보리\n",
+      "보리\n",
+      "보리\n",
+      "쌀\n",
+      "잡았다!\n"
+     ]
+    }
+   ],
+   "source": [
+    "rice = ['보리', '보리', '보리', '쌀', '보리', '보리']\n",
+    "\n",
+    "# 보리, 보리, 보리, 쌀, 잡았다!\n",
+    "for i in rice:\n",
+    "    print(i)\n",
+    "    if i == '쌀':\n",
+    "        print('잡았다!')\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e230ee-927f-4ce2-bdfd-93d218193533",
+   "metadata": {},
+   "source": [
+    "### continue\n",
+    "continue 이후의 코드를 실행하지 않고 다음 반복을 진행"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "73b9a0c6-79b1-429d-a650-81a5e1ff7ee9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i % 2:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "a90dc974-2771-4e01-8b35-5b1c8edb3e7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i % 2:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "e62f5ed1-c410-48cb-abe1-fc0bf6908f41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n",
+      "20\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = [10, 35, 20, 18, 9, 40]\n",
+    "\n",
+    "# 20살 넘은 경우에만 출력\n",
+    "for i in age:\n",
+    "    if i < 20:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bec079e-9bd7-4c24-bd01-8832139e1950",
+   "metadata": {},
+   "source": [
+    "### else\n",
+    "else문은 끝까지 반복이 진행된 후 실행됩니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "e1fbdb04-fd3a-4d0c-bcd0-dc042691c539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "break 못만남\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(6):\n",
+    "    if i > 100:\n",
+    "        break\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print('break 못만남')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "4225bd64-a934-4924-a3fa-764ce0d9e319",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 반복문이 다 진행되지 않으면 else 실행되지 않는다.\n",
+    "for i in range(6):\n",
+    "    if i > 3:\n",
+    "        break\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print('break 못만남')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "20bb4879-301c-4715-a3ad-865b887f4516",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 3, 5, 7, 9]\n",
+    "print(3 in numbers)\n",
+    "print(2 in numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "6f1d7cea-3ba3-4d7b-a1fe-df00a742739c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 3, 5, 7, 9]\n",
+    "target = 5\n",
+    "\n",
+    "for num in numbers:\n",
+    "    if num == target:\n",
+    "        print('True')\n",
+    "        break\n",
+    "    print(num)\n",
+    "else:\n",
+    "    print('Target 못찾음')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca1aa5c1-398b-472e-a47a-0aa0c8389c4b",
+   "metadata": {},
+   "source": [
+    "### pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "2692a12d-f58d-4a16-a8ed-2095158cc935",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if True:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71724aea-a399-4613-bbc4-1729222d3906",
+   "metadata": {},
+   "source": [
+    "### match\n",
+    "\n",
+    "```\n",
+    "match value:\n",
+    "    case 조건:\n",
+    "        code\n",
+    "    case 조건:\n",
+    "        code\n",
+    "    case _:\n",
+    "        code\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "90cf3f42-ce26-4387-9c8e-9f57e9ee5dff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "someting is wrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "status = 100 \n",
+    "\n",
+    "match status:\n",
+    "    case 400:\n",
+    "        print('Bad request')\n",
+    "    case 404:\n",
+    "        print('Not found')\n",
+    "    case _:\n",
+    "        print('someting is wrong')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab4d3ee1-73e3-4369-affe-3a464eeaadb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
